--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Logo Parallax</title>
+    <title>Aspire Ed & IT Solutions LLC</title>
     <style>
         body, html {
             height: 100%;
@@ -47,7 +47,7 @@
 <body>
     <div class="parallax-container">
         <div class="parallax-layer background">
-            <img src="logo.png" alt="Company Logo" class="logo">
+            <img src="aI.png" alt="Company Logo" class="logo">
         </div>
         <div class="parallax-layer foreground">
             <div class="coming-soon">Coming Soon</div>
