Commented loading soon

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="logo-container">
                 <img src="aI.png" alt="Company Logo" class="logo">
             </div>
-            <div class="loading-soon">Loading Soon</div>
+<!--             <div class="loading-soon">Loading Soon</div> -->
         </div>
     </div>
 
