Lets check parallax effect

--- a/index.html
+++ b/index.html
@@ -60,14 +60,13 @@
     <div class="parallax-container">
         <div class="parallax-layer background">
             <div class="logo-container">
-                <img src="logo.png" alt="Company Logo" class="logo">
+                <img src="aI.png" alt="Company Logo" class="logo">
             </div>
         </div>
         <div class="parallax-layer foreground">
             <div class="logo-container">
                 <img src="aI.png" alt="Company Logo" class="logo">
             </div>
-<!--             <div class="loading-soon">Loading Soon</div> -->
         </div>
     </div>
 
